--- a/train_and_deploy-solution.ipynb
+++ b/train_and_deploy-solution.ipynb
@@ -16,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -27,9 +29,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.0' or newer of 'numexpr' (version '2.7.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import boto3\n",
@@ -50,14 +71,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
+      "Bucket Path: s3://operationalized-dog-classifier-project/\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Setup Sagemaker Session and default buckets\n",
+    "sagemaker_session = sagemaker.Session(default_bucket='operationalized-dog-classifier-project')\n",
+    "bucket = sagemaker_session.default_bucket()\n",
+    "role = sagemaker.session.get_execution_role()\n",
+    "region = sagemaker_session.boto_region_name\n",
+    "\n",
+    "bucket_path = f's3://{bucket}/'\n",
+    "print(f'Bucket Path: {bucket_path}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
     "!wget https://s3-us-west-1.amazonaws.com/udacity-aind/dog-project/dogImages.zip\n",
     "!unzip dogImages.zip\n",
-    "!aws s3 cp dogImages s3://udacitysolution/ --recursive"
+    "os.remove('dogImages.zip')\n",
+    "sync_command = f'aws s3 sync ./dogImages {bucket_path}'\n",
+    "!{sync_command}"
    ]
   },
   {
@@ -77,8 +132,6 @@
     "    \"learning_rate\": ContinuousParameter(0.001, 0.1),\n",
     "    \"batch_size\": CategoricalParameter([32, 64, 128, 256, 512]),\n",
     "}\n",
-    "\n",
-    "role = sagemaker.get_execution_role()\n",
     "\n",
     "objective_metric_name = \"Test Loss\"\n",
     "objective_type = \"Minimize\"\n",
@@ -590,9 +643,9 @@
  "metadata": {
   "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -604,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
