--- a/train_and_deploy-solution.ipynb
+++ b/train_and_deploy-solution.ipynb
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -1151,25 +1151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sagemaker:Repacking model artifact (s3://sagemaker-us-east-1-366182757343/output/pytorch-training-2023-11-16-11-40-04-578/output/model.tar.gz), script artifact (None), and dependencies ([]) into single tar.gz file located at s3://sagemaker-us-east-1-366182757343/pytorch-inference-2023-11-16-12-25-26-386/model.tar.gz. This may take some time depending on model size...\n",
-      "INFO:sagemaker:Creating model with name: pytorch-inference-2023-11-16-12-33-56-149\n",
-      "INFO:sagemaker:Creating endpoint-config with name pytorch-inference-2023-11-16-12-33-56-843\n",
-      "INFO:sagemaker:Creating endpoint with name pytorch-inference-2023-11-16-12-33-56-843\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n",
       "-----!"
      ]
     }
